// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`types-task returns all the types (including nested) found in the app and outputs to JSON 1`] = `
Object {
  "info": Object {
    "friendlyTaskName": "Ember Types",
    "taskClassification": Object {
      "category": "metrics",
      "group": "ember",
    },
    "taskName": "ember-types",
  },
  "result": Array [
    Object {
      "count": 2,
      "data": Array [
        "/addon/components/my-component.js",
        "/lib/ember-super-button/addon/components/my-component.js",
      ],
      "key": "components",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/controllers/my-controller.js",
        "/lib/ember-super-button/addon/controllers/my-controller.js",
      ],
      "key": "controllers",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/helpers/my-helper.js",
        "/lib/ember-super-button/addon/helpers/my-helper.js",
      ],
      "key": "helpers",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/initializers/my-initializer.js",
        "/lib/ember-super-button/addon/initializers/my-initializer.js",
      ],
      "key": "initializers",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/instance-initializers/my-helper.js",
        "/lib/ember-super-button/addon/instance-initializers/my-helper.js",
      ],
      "key": "instance-initializers",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/mixins/my-mixin.js",
        "/lib/ember-super-button/addon/mixins/my-mixin.js",
      ],
      "key": "mixins",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/models/my-model.js",
        "/lib/ember-super-button/addon/models/my-model.js",
      ],
      "key": "models",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/routes/my-route.js",
        "/lib/ember-super-button/addon/routes/my-route.js",
      ],
      "key": "routes",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/services/my-service.js",
        "/lib/ember-super-button/addon/services/my-service.js",
      ],
      "key": "services",
      "type": "summary",
    },
    Object {
      "count": 2,
      "data": Array [
        "/addon/templates/my-component.hbs",
        "/lib/ember-super-button/addon/templates/my-component.hbs",
      ],
      "key": "templates",
      "type": "summary",
    },
  ],
}
`;

exports[`types-task returns all the types (including nested) found in the app and outputs to the console 1`] = `
"Ember Types

Types                 Count 
components            2     
controllers           2     
helpers               2     
initializers          2     
instance-initializers 2     
mixins                2     
models                2     
routes                2     
services              2     
templates             2     

"
`;

exports[`types-task returns all the types found in the app and outputs to JSON 1`] = `
Object {
  "info": Object {
    "friendlyTaskName": "Ember Types",
    "taskClassification": Object {
      "category": "metrics",
      "group": "ember",
    },
    "taskName": "ember-types",
  },
  "result": Array [
    Object {
      "count": 1,
      "data": Array [
        "/addon/components/my-component.js",
      ],
      "key": "components",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/controllers/my-controller.js",
      ],
      "key": "controllers",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/helpers/my-helper.js",
      ],
      "key": "helpers",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/initializers/my-initializer.js",
      ],
      "key": "initializers",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/instance-initializers/my-helper.js",
      ],
      "key": "instance-initializers",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/mixins/my-mixin.js",
      ],
      "key": "mixins",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/models/my-model.js",
      ],
      "key": "models",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/routes/my-route.js",
      ],
      "key": "routes",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/services/my-service.js",
      ],
      "key": "services",
      "type": "summary",
    },
    Object {
      "count": 1,
      "data": Array [
        "/addon/templates/my-component.hbs",
      ],
      "key": "templates",
      "type": "summary",
    },
  ],
}
`;

exports[`types-task returns all the types found in the app and outputs to the console 1`] = `
"Ember Types

Types                 Count 
components            1     
controllers           1     
helpers               1     
initializers          1     
instance-initializers 1     
mixins                1     
models                1     
routes                1     
services              1     
templates             1     

"
`;
